# cv-perfector

./: .gitignore  Gemini_LangChain_QA_Chroma_WebLoad.ipynb  MakeFile  Makefile  README.md  hello.py  output.md  pyproject.toml  pytest.ini  secrets.example.yaml
app/application/use_case/: extract_resume.py
app/core/: config.py  cv2md.py
app/core/client/: gemini.py
app/domain/interfaces/: base_llm.py  base_parser.py  file_parser.py
app/domain/models/: job.py  resume.py  resume_analyze.py
app/infrastructure/llm/models/: __init__.py  gemini.py
app/infrastructure/llm/prompts/: extraction_expert.py
app/infrastructure/parser/pdf/: __init__.py  pdf_parser.py
app/infrastructure/pdf/: pdf_parser.py
app/prompt/: prompt_resume_feedback.py
app/schemas/: llm.py
app/test/: conftest.py  test_extract_resume.py  test_gemini.py  test_pdf_parser.py
chroma_db/: chroma.sqlite3
src/core/: config.py  cv2md.py
src/test/: test_gemini.py
