[project]
name = "cv-perfector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.5.18",
    "fastapi>=0.115.4",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.5",
    "langchain-google-genai>=2.0.4",
    "langchain>=0.3.7",
    "loguru>=0.7.2",
    "markdown-to-json>=2.1.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "pymupdf4llm>=0.0.17",
    "six>=1.16.0",
]
