[project]
name = "cv-perfector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.5.18",
    "click>=8.1.7",
    "fastapi>=0.115.4",
    "google-generativeai>=0.8.3",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.5",
    "langchain-google-genai>=2.0.4",
    "langchain>=0.3.7",
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
    "pydantic[email]>=2.9.2",
    "pymupdf4llm>=0.0.17",
    "pyyaml>=6.0.2",
    "six>=1.16.0",
]
